// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`IPC wire contracts Settings shape 1`] = `
{
  "appearance": {
    "reasoningVisibility": "compact",
    "streaming": false,
    "theme": "dark",
  },
  "layout": {
    "dockview": null,
  },
  "notifications": {
    "turnEnd": false,
    "waitingForInput": true,
  },
  "version": 7,
  "workspaces": {
    "defaultWorkspace": "D:\\repo\\dafman",
    "recent": [
      "D:\\repo\\dafman",
      "C:\\code\\demo",
    ],
  },
}
`;

exports[`IPC wire contracts Settings with persisted layout 1`] = `
{
  "appearance": {
    "reasoningVisibility": "compact",
    "streaming": true,
    "theme": "dark",
  },
  "layout": {
    "dockview": {
      "activeGroup": "g1",
      "grid": {
        "height": 600,
        "orientation": "HORIZONTAL",
        "root": {},
        "width": 800,
      },
      "panels": {
        "sess-1": {
          "contentComponent": "chat",
          "id": "sess-1",
        },
      },
    },
  },
  "notifications": {
    "turnEnd": true,
    "waitingForInput": true,
  },
  "version": 7,
  "workspaces": {
    "defaultWorkspace": "",
    "recent": [],
  },
}
`;

exports[`IPC wire contracts ModelSummary shape 1`] = `
{
  "defaultReasoningEffort": "medium",
  "id": "claude-sonnet-4.5",
  "name": "Claude Sonnet 4.5",
  "supportedReasoningEfforts": [
    "low",
    "medium",
    "high",
  ],
  "supportsReasoningEffort": true,
}
`;

exports[`IPC wire contracts SessionEventPayload shape 1`] = `
{
  "data": {
    "deltaContent": "hi",
  },
  "eventType": "assistant.message_delta",
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts SessionEventPayload with envelope metadata (tool event) 1`] = `
{
  "agentId": "sub-agent-7",
  "data": {
    "result": {
      "content": "ok",
      "detailedContent": 
"ok
"
,
    },
    "success": true,
    "toolCallId": "call-abc",
  },
  "eventId": "00000000-0000-0000-0000-000000000001",
  "eventType": "tool.execution_complete",
  "sessionId": "sess-1",
  "timestamp": "2026-05-17T15:00:00.000Z",
}
`;

exports[`IPC wire contracts SessionMetadataSummary shape 1`] = `
{
  "branch": "main",
  "cwd": "/repo",
  "isRemote": false,
  "modifiedTime": "2026-05-17T11:30:00.000Z",
  "repository": "AsafMah/dafman",
  "sessionId": "s-1",
  "startTime": "2026-05-17T10:00:00.000Z",
  "summary": "refactor auth",
}
`;

exports[`IPC wire contracts AppErrorPayload variants 1`] = `
[
  {
    "kind": "ClientNotStarted",
  },
  {
    "data": "sess-42",
    "kind": "SessionNotFound",
  },
  {
    "data": "disk full",
    "kind": "Settings",
  },
  {
    "data": "rpc closed",
    "kind": "Sdk",
  },
]
`;

exports[`IPC wire contracts SessionMode union 1`] = `
[
  "interactive",
  "plan",
  "autopilot",
]
`;

exports[`IPC wire contracts sendMessage request — default mode (omitted) 1`] = `
{
  "sessionId": "sess-1",
  "text": "hello",
}
`;

exports[`IPC wire contracts sendMessage request — explicit enqueue mode 1`] = `
{
  "mode": "enqueue",
  "sessionId": "sess-1",
  "text": "queue this",
}
`;

exports[`IPC wire contracts sendMessage request — explicit immediate mode 1`] = `
{
  "mode": "immediate",
  "sessionId": "sess-1",
  "text": "steer this",
}
`;

exports[`IPC wire contracts abortSession request shape 1`] = `
{
  "sessionId": "sess-1",
}
`;

exports[`IPC wire contracts SessionHistoryCompactionResult shape 1`] = `
{
  "messagesRemoved": 5,
  "success": true,
  "tokensFreed": 1234,
}
`;
